[gd_scene load_steps=4 format=3 uid="uid://67b2cj8y4qjx"]

[ext_resource type="Theme" uid="uid://cdwqgphxj12ib" path="res://Theme/theme.tres" id="1_gbtox"]
[ext_resource type="PackedScene" uid="uid://i5qmt54apcit" path="res://Scenes/Music/game_over.tscn" id="2_o1tqc"]
[ext_resource type="Script" path="res://Scenes/Screens/GameOverScreen/game_over_screen.gd" id="2_sqk1r"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gbtox")
script = ExtResource("2_sqk1r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -71.0
offset_right = 176.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Game Over"

[node name="TryAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Try again!"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="GameOver" parent="." instance=ExtResource("2_o1tqc")]

[connection signal="pressed" from="VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
